styles/hero.css
/* .hero__container {
    width: 100%;
    position: relative; */
    /* background-color:#EBEBEB; */
    /* border:1px solid rgb(227, 19, 54); */
    /* max-height: 600px; */
    /* height:auto;
    top:2rem;

} */

.hero_image_desktop{
    /* position:absolute; */
    height:450px;
    width:845px;
    aspect-ratio: 1.8/1;
    /* top:10%; */
    margin:10% 5% 5% 2%;
    /* right:2rem; */
    padding-bottom: 2rem;
}

.hero_image_mobile{
    display:none;
}

/* mobile view */
@media (max-width: 920px) {
    /* .hero__container {
        height:auto; */
        /* align-items: center; */
      /* } */
    .hero_image_desktop{
      display:none;
    }
    .hero_image_mobile{
        display:block;
        margin:auto;
        width:400px;
        height:170px;
        aspect-ratio: 1.81/1;
    }
}

